# horse_model_project

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run_all.py
data/processed/: test_cleaned.csv
notebooks/: 01_eda.ipynb  02_features.ipynb  03_models.ipynb  04_hyperparam_tuning.ipynb  05_ensemble_stack.ipynb  06_metrics_evaluation.ipynb  07_visuals.ipynb  08_edge_analysis.ipynb  09_portfolio_simulator.ipynb  10_market_edge.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/: features.py  model.py  visuals.py
src/processing/: combine.py
